<script type="module" src="app.js"></script>

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			margin-top: 10px;
 		}
 	</style>
-	<script type="module" src="revMain.js"></script>
+	<script type="module" src="app.js"></script>
 </head>
 
 <body>
