--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<meta name="robots" content="noindex,nofollow">
 	<meta name="description" content="adoptingESModulesUsingCanvasElementAndCo.">
 	<title>canvasESMeducated</title>
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
-
 	<style>
 		canvas {
 			border: 1px solid black;
@@ -19,9 +17,12 @@
 </head>
 
 <body>
-	<button class="circle">Circle</button>
-	<button class="square">Square</button>
-	<button class="triangle">Triangle</button>
+	<button class="square">正方形</button>
+	<button class="circle1">円1</button>
+	<button class="circle2">円2</button>
+	<button class="triangle1">正三角形1</button>
+	<button class="triangle2">正三角形2</button>
+	<button class="action">起動</button>
 </body>
 
 </html>
