--- a/index.html
+++ b/index.html
@@ -2,22 +2,19 @@
 <html lang="ja">
 
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta charset="utf-8">
+	<meta http-equiv="Content-Security-Policy" content="default-src 'self';script-src 'self';font-src 'self';style-src 'self';object-src 'none'">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<meta name="description" content="adoptingESModulesUsingCanvasElementAndCo.">
+	<meta name="description" content="Adopting-ESM-with-2D-contexts-put-on-a-canvas.">
 	<title>canvasESMeducated</title>
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
-	<style>
-		canvas {
-			border: 1px solid black;
-			margin-top: 10px;
-		}
-	</style>
+	<link rel="stylesheet" href="style.css" type="text/css">
 	<script type="module" src="app.js"></script>
 </head>
 
 <body>
-	<button class="square">正方形</button>
+	<button class="square1">正方形1</button>
+	<button class="square2">正方形2</button>
 	<button class="circle1">円1</button>
 	<button class="circle2">円2</button>
 	<button class="triangle1">正三角形1</button>
