--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     />
     <title>canvasESMeducated</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <link rel="stylesheet" href="./dist/style.css" type="text/css" />
-    <script type="module" src="./dist/main.js"></script>
+    <link rel="stylesheet" href="style.css" type="text/css" />
+    <script type="module" src="app.js"></script>
   </head>
 
   <body>
