tiny changes added.

--- a/index.html
+++ b/index.html
@@ -20,16 +20,12 @@
   <body>
     <div class="wrapper">
       <header>
-        <button class="square"><p>斜めに連なる静止した4つの正方形</p></button>
-        <button class="circle"><p>重なり合った4つの円</p></button>
-        <button class="triangle">
-          <p>斜めに連なる静止した4つの正三角形</p>
-        </button>
+        <button class="square">斜めに連なる静止した4つの正方形</button>
+        <button class="circle">重なり合った4つの円</button>
+        <button class="triangle">斜めに連なる静止した4つの正三角形</button>
         <button class="action">
-          <p>
-            暴円
-            (円が現われ次第、canvas内のお好きなところをclickしてください。clickするほどよく暴れます。)
-          </p>
+          暴円
+          (円が現われ次第、canvas内のお好きなところをclickしてください。clickするほどよく暴れます。)
         </button>
         <button class="clear">
           <p>Clear</p>
@@ -39,7 +35,7 @@
         <canvas id="canvas"></canvas>
       </main>
       <footer>
-        <p>Since Jan, 2022 (C) Y.K</p>
+        Since Jan, 2022 (C) Y.K
       </footer>
     </div>
   </body>
