this stuff turned out art.

--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
   <body>
     <div class="wrapper">
       <header>
-        <button class="square">斜めに連なる静止した4つの正方形</button>
-        <button class="circle">重なり合った4つの円</button>
-        <button class="triangle">斜めに連なる静止した4つの正三角形</button>
+        <button class="square">正方形の騎行</button>
+        <button class="circle">内包しあう円</button>
+        <button class="triangle">正三角形からなる正三角形</button>
         <button class="action">
           暴円
-          (円が現われ次第、canvas内のお好きなところをclickしてください。clickするほどよく暴れます。)
+          (ここを<span>click</span>すると円が現われます。続いて<span>canvas</span>内のお好きなところを<span>click</span>してください。<span>click</span>するほどよく暴れます。)
         </button>
         <button class="clear">
-          <p>Clear</p>
+          ここを<span>click</span>すると<span>canvas</span>をクリアできます。暴円も空に消えます。
         </button>
       </header>
       <main>
