--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
     <title>canvasESMeducated</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="preload" as="style" href="style.css">
     <link rel="stylesheet" href="style.css" type="text/css" />
     <script type="module" src="app.js"></script>
   </head>
@@ -22,13 +23,13 @@
       <header>
         <button class="square">正方形の騎行</button>
         <button class="circle">内包しあう円</button>
-        <button class="triangle">正三角形からなる正三角形</button>
+        <button class="triangle">小三角形の集合</button>
         <button class="action">
-          暴円
-          (ここを<span>click</span>すると円が現われます。続いて<span>canvas</span>内のお好きなところを<span>click</span>してください。<span>click</span>するほどよく暴れます。)
+          暴れる円
+          (ここを<span>click!</span>=>円出現<span>canvas</span>を<span>click!</span>=>繰り返し<span>click!</span>)
         </button>
         <button class="clear">
-          ここを<span>click</span>すると<span>canvas</span>をクリアできます。暴円も空に消えます。
+          <span>canvas</span>クリアはくちらを<span>click!</span>暴れ円も露と消えます。
         </button>
       </header>
       <main>
