added one button

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
         <nav>
           <ol>
             <li>
+              <button disabled>
+                Please narrow the width of the window as far as you can if you
+                couldn't get a holistic view. Sorry for the inconvenience.
+              </button>
+            </li>
+            <li>
               <button class="square">
                 <span>Click</span> You'll see squares diagonally running down.
               </button>
@@ -41,8 +47,8 @@
             <li>
               <button class="action">
                 <span>Click</span> A circle shows up. One more
-                <span>click</span> ON THE CANVAS (No, no, not here. I said
-                ON THE CANVAS, okay?.) makes it start moving. Repeat
+                <span>click</span> ON THE CANVAS (No, no, not here. I said ON
+                THE CANVAS, okay?.) makes it start moving. Repeat
                 <span>clicking</span> if you'd want more speed.
               </button>
             </li>
