--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <ol>
             <li>
               <button disabled>
-                Please narrow the width of the window as far as you can if you
+                Please narrow the width of the window as possible as you can if you
                 couldn't get a holistic view. Sorry for the inconvenience.
               </button>
             </li>
