split by z-indecies.

--- a/index.html
+++ b/index.html
@@ -49,20 +49,20 @@
                 <span>Click</span> A circle shows up. One more
                 <span>click</span> ON THE CANVAS (No, no, not here. I said ON
                 THE CANVAS, okay?.) makes it start moving. Repeat
-                <span>clicking</span> if you'd want more speed.
+                <span>clicking</span> if you'd want more speed, and you can also
+                slow it down to stop it by <span>swiping</span> out of the
+                canvas. So now, enjoy <span>Click</span> & <span>Swipe</span>.
               </button>
             </li>
             <li>
-              <button class="clear">
-                <span>Click</span> here to clear the canvas. At the moment, the
-                circle vanishes into...
-              </button>
+              <button class="relo"><span>Click</span> here to reload.</button>
             </li>
           </ol>
         </nav>
       </header>
       <main>
-        <canvas id="canvas"></canvas>
+				<canvas id="canvas0"></canvas>
+				<canvas id="canvas1"></canvas>
       </main>
       <footer>
         This product is dedicated to Ms. Sicily.<br />Since Jan, 2022 (C) Y.K
