--- a/index.html
+++ b/index.html
@@ -22,16 +22,11 @@
     <div class="wrapper">
       <header>
         <nav>
-          <ol>
-            <li>
-              <button disabled id="attention">
-                Please narrow the width of the window as possible as you can if
-                you couldn't get a holistic view. Sorry for the inconvenience.
-              </button>
-            </li>
+          <ul>
             <li>
               <button class="square">
-                <span>Click</span> You'll see squares diagonally running down.
+                <span>Click</span> You'll see squares diagonally running down
+                ~top left to bottom right~.
               </button>
             </li>
             <li>
@@ -46,23 +41,37 @@
             </li>
             <li>
               <button class="action">
-                <span>Click</span> A circle shows up. One more
-                <span>click</span> ON THE CANVAS (No, no, not here. I said ON
-                THE CANVAS, okay?.) makes it start moving. Repeat
-                <span>clicking</span> if you'd want more speed, and you can also
-                slow it down to stop it by <span>swiping</span> out of the
-                canvas. So now, enjoy <span>Click</span> & <span>Swipe</span>.
+                <span>Click</span> A circle shows up. <br />One more
+                <span>Click</span> ON THE CANVAS (No, no, not here. I said ON
+                THE CANVAS, okay?) makes it start moving.<br />
+                Repeat <span>Clicking</span> if you'd want more speed, and you
+                can also slow it down to stop it by swiping a
+                <span>Mouse out</span> of the canvas. <br />So now, enjoy
+                <span>Click</span> & <span>Mouse-out</span>.
               </button>
             </li>
             <li>
-              <button class="relo"><span>Click</span> here to reload.</button>
+              <button class="clear_canvas0">
+                <span>Click</span> here to clear figures.
+              </button>
             </li>
-          </ol>
+            <li>
+              <button class="clear_canvas1">
+                <span>Click</span> here to clear a ball after you stop it ~mouse
+                out the same times as you clicked~.
+              </button>
+            </li>
+            <li>
+              <button class="relo">
+                <span>Click</span> here to reload the whole page.
+              </button>
+            </li>
+          </ul>
         </nav>
       </header>
       <main>
-				<canvas id="canvas0"></canvas>
-				<canvas id="canvas1"></canvas>
+        <canvas id="canvas0"></canvas>
+        <canvas id="canvas1"></canvas>
       </main>
       <footer>
         This product is dedicated to Ms. Sicily.<br />Since Jan, 2022 (C) Y.K
