--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     />
     <title>canvasESMeducated</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <link rel="preload" as="style" href="style.css" />
-    <link rel="stylesheet" href="style.css" type="text/css" media="all" />
+    <link rel="preload" as="style" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="./css/all.min.css" />
     <script type="module" src="app.js"></script>
   </head>
 
@@ -74,7 +75,9 @@
         <canvas id="canvas1"></canvas>
       </main>
       <footer>
-        This product is dedicated to Ms. Sicily.<br />Since Jan, 2022 (C) Y.K
+        This product is dedicated to Ms. Sicily. and Mr. Su,
+        <button id="changeBtn"><i class="fa-solid fa-expand"></i></button
+        ><br />Since Jan, 2022 (C) Y.K
       </footer>
     </div>
   </body>
