--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <canvas id="canvas1"></canvas>
       </main>
       <footer>
-        This product is dedicated to Ms. Sicily. and Mr. Su, Since Jan, 2022 (C)
+        This product is dedicated to Ms. Sicily and Mr. Su. Since Jan, 2022 (C)
         Y.K
       </footer>
     </div>
