--- a/index.html
+++ b/index.html
@@ -21,26 +21,26 @@
   <body>
     <div class="wrapper">
       <header>
-        <nav>
+        <!-- <nav>
           <ul>
-            <li>
-              <button class="square">
+            <li> -->
+              <button class="square" type="button">
                 <span>Click</span> You'll see squares diagonally running down
                 ~top left to bottom right~.
               </button>
-            </li>
-            <li>
-              <button class="circle">
+            <!-- </li>
+            <li> -->
+              <button class="circle" type="button">
                 <span>Click</span> Challenge1: Try counting all circles.
               </button>
-            </li>
-            <li>
-              <button class="triangle">
+            <!-- </li>
+            <li> -->
+              <button class="triangle" type="button">
                 <span>Click</span> Challenge2: Do the same to triangles.
               </button>
-            </li>
-            <li>
-              <button class="action">
+            <!-- </li>
+            <li> -->
+              <button class="action" type="button">
                 <span>Click</span> A circle shows up. <br />One more
                 <span>Click</span> ON THE CANVAS (No, no, not here. I said ON
                 THE CANVAS, okay?) makes it start moving.<br />
@@ -49,25 +49,25 @@
                 <span>Mouse out</span> of the canvas. <br />So now, enjoy
                 <span>Click</span> & <span>Mouse-out</span>.
               </button>
-            </li>
-            <li>
-              <button class="clear_canvas0">
+            <!-- </li>
+            <li> -->
+              <button class="clear_canvas0" type="button">
                 <span>Click</span> here to clear figures.
               </button>
-            </li>
-            <li>
-              <button class="clear_canvas1">
+            <!-- </li>
+            <li> -->
+              <button class="clear_canvas1" type="button">
                 <span>Click</span> here to clear a ball after you stop it ~mouse
                 out the same times as you clicked~.
               </button>
-            </li>
-            <li>
-              <button class="relo">
+            <!-- </li>
+            <li> -->
+              <button class="relo" type="button">
                 <span>Click</span> here to reload the whole page.
               </button>
-            </li>
+            <!-- </li>
           </ul>
-        </nav>
+        </nav> -->
       </header>
       <main>
         <canvas id="canvas0"></canvas>
