--- a/index.html
+++ b/index.html
@@ -21,53 +21,35 @@
   <body>
     <div class="wrapper">
       <header>
-        <!-- <nav>
-          <ul>
-            <li> -->
-              <button class="square" type="button">
-                <span>Click</span> You'll see squares diagonally running down
-                ~top left to bottom right~.
-              </button>
-            <!-- </li>
-            <li> -->
-              <button class="circle" type="button">
-                <span>Click</span> Challenge1: Try counting all circles.
-              </button>
-            <!-- </li>
-            <li> -->
-              <button class="triangle" type="button">
-                <span>Click</span> Challenge2: Do the same to triangles.
-              </button>
-            <!-- </li>
-            <li> -->
-              <button class="action" type="button">
-                <span>Click</span> A circle shows up. <br />One more
-                <span>Click</span> ON THE CANVAS (No, no, not here. I said ON
-                THE CANVAS, okay?) makes it start moving.<br />
-                Repeat <span>Clicking</span> if you'd want more speed, and you
-                can also slow it down to stop it by swiping a
-                <span>Mouse out</span> of the canvas. <br />So now, enjoy
-                <span>Click</span> & <span>Mouse-out</span>.
-              </button>
-            <!-- </li>
-            <li> -->
-              <button class="clear_canvas0" type="button">
-                <span>Click</span> here to clear figures.
-              </button>
-            <!-- </li>
-            <li> -->
-              <button class="clear_canvas1" type="button">
-                <span>Click</span> here to clear a ball after you stop it ~mouse
-                out the same times as you clicked~.
-              </button>
-            <!-- </li>
-            <li> -->
-              <button class="relo" type="button">
-                <span>Click</span> here to reload the whole page.
-              </button>
-            <!-- </li>
-          </ul>
-        </nav> -->
+        <button class="square" type="button">
+          <span>Click</span> You'll see squares diagonally running down ~top
+          left to bottom right~.
+        </button>
+        <button class="circle" type="button">
+          <span>Click</span> Challenge1: Try counting all circles.
+        </button>
+        <button class="triangle" type="button">
+          <span>Click</span> Challenge2: Do the same to triangles.
+        </button>
+        <button class="action" type="button">
+          <span>Click</span> A circle shows up. <br />One more
+          <span>Click</span> ON THE CANVAS (No, no, not here. I said ON THE
+          CANVAS, okay?) makes it start moving.<br />
+          Repeat <span>Clicking</span> if you'd want more speed, and you can
+          also slow it down to stop it by swiping a <span>Mouse out</span> of
+          the canvas. <br />So now, enjoy <span>Click</span> &
+          <span>Mouse-out</span>.
+        </button>
+        <button class="clear_canvas0" type="button">
+          <span>Click</span> here to clear figures.
+        </button>
+        <button class="clear_canvas1" type="button">
+          <span>Click</span> here to clear a ball after you stop it ~mouse out
+          the same times as you clicked~.
+        </button>
+        <button class="relo" type="button">
+          <span>Click</span> here to reload the whole page.
+        </button>
       </header>
       <main>
         <canvas id="canvas0"></canvas>
