--- a/index.html
+++ b/index.html
@@ -32,13 +32,12 @@
           <span>Click</span> Challenge2: Do the same to triangles.
         </button>
         <button class="action" type="button">
-          <span>Click</span> A circle shows up. <br />One more
-          <span>Click</span> ON THE CANVAS (No, no, not here. I said ON THE
-          CANVAS, okay?) makes it start moving.<br />
-          Repeat <span>Clicking</span> if you'd want more speed, and you can
-          also slow it down to stop it by swiping a <span>Mouse out</span> of
-          the canvas. <br />So now, enjoy <span>Click</span> &
-          <span>Mouse-out</span>.
+          <span>Click</span> here, and then <span>Click</span> CANVAS to make
+          circle showing up and moving.<br />
+          Repeat <span>Clicking</span> if you'd want more speed.<br />
+          You can also slow it down to stop it by swiping a
+          <span>Mouse out</span> of the canvas.<br />
+          So now, enjoy <span>Click</span> & <span>Mouse-out</span>.
         </button>
         <button class="clear_canvas0" type="button">
           <span>Click</span> here to clear figures.
