--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <canvas id="canvas1"></canvas>
         <canvas id="canvas2"></canvas>
 				<canvas id="canvas3"></canvas>
-
+				<canvas id="canvas4"></canvas>
       </main>
       <footer>
         This product is dedicated to Ms. Sicily and Mr. Su. Since Jan, 2022 (C)
