--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
           <span>Mouse out</span> of the canvas.<br />
           So now, enjoy <span>Click</span> & <span>Mouse-out</span>.
         </button>
-        <button class="clear_canvas1" type="button">
+        <button class="clear_canvas1_4" type="button">
           <span>Click</span> here to clear figures.
         </button>
-        <button class="clear_canvas3" type="button">
+        <button class="clear_canvas5" type="button">
           <span>Click</span> here to clear a ball after you stop it ~mouse out
           the same times as you clicked~.
         </button>
@@ -55,6 +55,7 @@
         <canvas id="canvas2"></canvas>
 				<canvas id="canvas3"></canvas>
 				<canvas id="canvas4"></canvas>
+				<canvas id="canvas5"></canvas>
       </main>
       <footer>
         This product is dedicated to Ms. Sicily and Mr. Su. Since Jan, 2022 (C)
