--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
           <span>Click</span> Challenge2: Do the same to triangles.
         </button>
         <button class="action" type="button">
-          <span>Click</span> here, and then <span>Click</span> CANVAS to make
-          circle showing up and moving.<br />
+          <span>Click</span> here to make a red ball show up, and then <span>Click</span> CANVAS to make
+          it moving.<br />
           Repeat <span>Clicking</span> if you'd want more speed.<br />
           You can also slow it down to stop it by swiping a
           <span>Mouse out</span> of the canvas.<br />
