--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
           <span>Click</span> Challenge2: Do the same to triangles.
         </button>
         <button class="action" type="button">
-          <span>Click</span> here to make a red ball show up, and then <span>Click</span> CANVAS to make
-          it moving.<br />
+          <span>Click</span> here to make a red ball show up, and then
+          <span>Click</span> CANVAS to make it moving.<br />
           Repeat <span>Clicking</span> if you'd want more speed.<br />
           You can also slow it down to stop it by swiping a
           <span>Mouse out</span> of the canvas.<br />
@@ -46,16 +46,20 @@
           <span>Click</span> here to clear a ball after you stop it ~mouse out
           the same times as you clicked~.
         </button>
+        <button class="splitter" type="button">
+          <span>Click</span> here to split canvases.<br />
+          <span>Click</span> again to gether them on the center.
+        </button>
         <button class="relo" type="button">
           <span>Click</span> here to reload the whole page.
         </button>
       </header>
       <main>
-        <canvas id="canvas1"></canvas>
-        <canvas id="canvas2"></canvas>
-				<canvas id="canvas3"></canvas>
-				<canvas id="canvas4"></canvas>
-				<canvas id="canvas5"></canvas>
+        <canvas class="canvas" id="canvas1"></canvas>
+        <canvas class="canvas" id="canvas2"></canvas>
+        <canvas class="canvas" id="canvas3"></canvas>
+        <canvas class="canvas" id="canvas4"></canvas>
+        <canvas class="canvas" id="canvas5"></canvas>
       </main>
       <footer>
         This product is dedicated to Ms. Sicily and Mr. Su. Since Jan, 2022 (C)
