--- a/index.html
+++ b/index.html
@@ -22,36 +22,40 @@
     <div class="wrapper">
       <header>
         <button class="square" type="button">
-          <span>Click</span> You'll see squares diagonally running down ~top
-          left to bottom right~.
+          <span>Click</span> 連なる正方形の表示
         </button>
         <button class="circle" type="button">
-          <span>Click</span> Challenge1: Try counting all circles.
+          <span>Click</span> Challenge1: 円の数をすべて数え上げてください。
         </button>
         <button class="triangle" type="button">
-          <span>Click</span> Challenge2: Do the same to triangles.
+          <span>Click</span> Challenge2:
+          正三角形の数をすべて数え上げてください。
         </button>
         <button class="action" type="button">
-          <span>Click</span> here to make a red ball show up, and then
-          <span>Click</span> CANVAS to make it moving.<br />
-          Repeat <span>Clicking</span> if you'd want more speed.<br />
-          You can also slow it down to stop it by swiping a
-          <span>Mouse out</span> of the canvas.<br />
-          So now, enjoy <span>Click</span> & <span>Mouse-out</span>.
+          こちら <span>Click</span> で赤色ボールが出現<br />
+          CANVAS <span>Click</span> でボールが跳躍開始<br />
+          繰り返しCANVAS <span>Click</span> でボールがスピードアップ<br />
+          CANVASから
+          <span>Mouse out</span> 繰り返しで、ボールはスピードダウンし停止<br />
+          それでは <span>Click</span> & <span>Mouse-out</span> してみましょう。
         </button>
         <button class="clear_canvas1_4" type="button">
-          <span>Click</span> here to clear figures.
+          こちらを <span>Click</span> するとボール以外の図形がすべて消えます。
         </button>
         <button class="clear_canvas5" type="button">
-          <span>Click</span> here to clear a ball after you stop it ~mouse out
-          the same times as you clicked~.
+          ボールをとめてから、こちらを
+          <span>Click</span> するとボールが消えます。
         </button>
         <button class="splitter" type="button">
-          <span>Click</span> here to split canvases.<br />
-          <span>Click</span> again to gether them on the center.
+          こちら
+          <span>Click</span>
+          でそれぞれの図形とボールを横方向に分割して表示<br />
+          もう一度
+          <span>Click</span>
+          でそれぞれの図形とボールを画面の中央に集めて表示
         </button>
         <button class="relo" type="button">
-          <span>Click</span> here to reload the whole page.
+          リロードするには、こちらを <span>Click</span>
         </button>
       </header>
       <main>
