--- a/index.html
+++ b/index.html
@@ -22,40 +22,40 @@
     <div class="wrapper">
       <header>
         <button class="square" type="button">
-          <span>Click</span> 連なる正方形の表示
+          <span>Click</span> 黄と紫の正方形によるネクタイの抽象
         </button>
         <button class="circle" type="button">
-          <span>Click</span> Challenge1: 円の数をすべて数え上げてください。
+          <span>Click</span> Challenge1: 円の数をいくつ見つけられましたか。
         </button>
         <button class="triangle" type="button">
           <span>Click</span> Challenge2:
-          正三角形の数をすべて数え上げてください。
+          正三角形の数をいくつ見つけられましたか。
         </button>
+				<button class="clear_canvas1_4" type="button">
+					こちらを <span>Click</span> すると図形がすべて消えます。
+				</button>
         <button class="action" type="button">
           こちら <span>Click</span> で赤色ボールが出現<br />
-          CANVAS <span>Click</span> でボールが跳躍開始<br />
-          繰り返しCANVAS <span>Click</span> でボールがスピードアップ<br />
-          CANVASから
-          <span>Mouse out</span> 繰り返しで、ボールはスピードダウンし停止<br />
-          それでは <span>Click</span> & <span>Mouse-out</span> してみましょう。
-        </button>
-        <button class="clear_canvas1_4" type="button">
-          こちらを <span>Click</span> するとボール以外の図形がすべて消えます。
+          CANVAS <span>Click</span> でボールが跳躍<br />
+          繰り返し <span>Click</span> でボールはスピードアップ<br />
+          <span>Click</span> した回数分、CANVASから
+          <span>Mouse out</span> するとボールは停止<br />
+          それでは <span>Click</span> & <span>Mouse-out</span> をお試しください。
         </button>
         <button class="clear_canvas5" type="button">
-          ボールをとめてから、こちらを
-          <span>Click</span> するとボールが消えます。
+          ボールが停止状態であれば、こちらを
+          <span>Click</span> でボールが消えます。
         </button>
         <button class="splitter" type="button">
           こちら
           <span>Click</span>
-          でそれぞれの図形とボールを横方向に分割して表示<br />
+          でそれぞれの図形とボールを横方向に展開して表示<br />
           もう一度
           <span>Click</span>
-          でそれぞれの図形とボールを画面の中央に集めて表示
+          でそれぞれの図形とボールを画面の中央にそろえて表示
         </button>
         <button class="relo" type="button">
-          リロードするには、こちらを <span>Click</span>
+          リロードはこちらを <span>Click</span>
         </button>
       </header>
       <main>
