--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
           <span>Click</span> 黄と紫の正方形によるネクタイの抽象
         </button>
         <button class="circle" type="button">
-          <span>Click</span> Challenge1: 円の数をいくつ見つけられましたか。
+          <span>Click</span> Challenge1: 円をいくつ見つけられましたか。
         </button>
         <button class="triangle" type="button">
           <span>Click</span> Challenge2:
-          正三角形の数をいくつ見つけられましたか。
+          正三角形をいくつ見つけられましたか。
         </button>
 				<button class="clear_canvas1_4" type="button">
 					こちらを <span>Click</span> すると図形がすべて消えます。
