--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
           <span>Click</span> Challenge1: 円をいくつ見つけられましたか。
         </button>
         <button class="triangle" type="button">
-          <span>Click</span> Challenge2:
-          正三角形をいくつ見つけられましたか。
+          <span>Click</span> Challenge2: 正三角形をいくつ見つけられましたか。
         </button>
-				<button class="clear_canvas1_4" type="button">
-					こちらを <span>Click</span> すると図形がすべて消えます。
-				</button>
+        <button class="clear_canvas1_4" type="button">
+          こちらを <span>Click</span> すると図形がすべて消えます。
+        </button>
         <button class="action" type="button">
           こちら <span>Click</span> で赤色ボールが出現<br />
           CANVAS <span>Click</span> でボールが跳躍<br />
           繰り返し <span>Click</span> でボールはスピードアップ<br />
           <span>Click</span> した回数分、CANVASから
           <span>Mouse out</span> するとボールは停止<br />
-          それでは <span>Click</span> & <span>Mouse-out</span> をお試しください。
+          それでは <span>Click</span> &
+          <span>Mouse-out</span> をお試しください。
         </button>
         <button class="clear_canvas5" type="button">
           ボールが停止状態であれば、こちらを
