--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="preload" as="style" href="style.css" />
     <link rel="stylesheet" href="style.css" type="text/css" media="all" />
-    <script type="module" src="dist/main.js"></script>
+    <script type="module" src="app.js"></script>
   </head>
 
   <body>
