--- a/index.html
+++ b/index.html
@@ -18,40 +18,33 @@
   <div class="wrapper">
     <header>
       <button class="square" type="button">
-        <span>Click</span> Challenge0: 黄と紫の正方形による<u>ネ〇〇イ</u>の抽象
+        Challenge1: 黄と紫の四角による<u>ネ〇〇イ</u>の抽象 => <span>Click</span>
       </button>
       <button class="circle" type="button">
-        <span>Click</span> Challenge1: 円をいくつ見つけられましたか。
+        Challenge2: 円はいくつ ? => <span>Click</span>
       </button>
       <button class="triangle" type="button">
-        <span>Click</span> Challenge2: 正三角形をいくつ見つけられましたか。
+        Challenge3: 三角はいくつ ? => <span>Click</span>
       </button>
       <button class="clear_canvas1_4" type="button">
-        こちらを <span>Click</span> すると図形がすべて消えます。
+        図形クリア => <span>Click</span>
       </button>
       <button class="action" type="button">
-        こちら <span>Click</span> で赤色ボールが出現<br />
-        CANVAS <span>Click</span> でボールが跳躍<br />
-        繰り返し <span>Click</span> でボールはスピードアップ<br />
-        <span>Click</span> した回数分、CANVASから
-        <span>Mouse out</span> するとボールは停止<br />
-        それでは <span>Click</span> &
-        <span>Mouse-out</span> をお試しください。
+        赤色ボール出現 => ここを <span>Click</span><br />
+        ボール跳躍開始 => <u>CANVAS</u>を <span>Click</span><br />
+        跳躍スピードアップ => <u>CANVAS</u>を繰り返し <span>Click</span><br />
+        ボール停止 => CANVAS <span>Click</span> 回数分、<u>CANVAS</u>から <span>Mouse out</span><br />
+        それでは <span>Click</span> & <span>Mouse-out</span> をお楽しみください。
       </button>
       <button class="clear_canvas5" type="button">
-        ボールが停止状態であれば、こちらを
-        <span>Click</span> でボールが消えます。
+        ボールクリア => <u>ボールを停止させてから</u>ここを <span>Click</span>
       </button>
       <button class="splitter" type="button">
-        こちら
-        <span>Click</span>
-        でそれぞれの図形とボールを横方向に展開して表示<br />
-        もう一度
-        <span>Click</span>
-        でそれぞれの図形とボールを画面の中央にそろえて表示
+        図形とボールを横方向に展開表示 => <span>Click</span><br />
+        図形とボールを重ねて表示 => <span>Click</span>
       </button>
       <button class="relo" type="button">
-        リロードはこちらを <span>Click</span>
+        再読込 => <span>Click</span>
       </button>
     </header>
     <main>
