--- a/index.html
+++ b/index.html
@@ -18,30 +18,31 @@
   <div class="wrapper">
     <header>
       <button class="square" type="button">
-        Challenge1: 黄と紫の四角による<u>ネ〇〇イ</u>の抽象 => <span>Click</span>
+        Challenge1: 黄と紫の四角による<span class="underline">ネ〇〇イ</span>の抽象 => <span class="click">Click</span>
       </button>
       <button class="circle" type="button">
-        Challenge2: 円はいくつ ? => <span>Click</span>
+        Challenge2: 円はいくつ ? => <span class="click">Click</span>
       </button>
       <button class="triangle" type="button">
-        Challenge3: 三角はいくつ ? => <span>Click</span>
+        Challenge3: 三角はいくつ ? => <span class="click">Click</span>
       </button>
       <button class="clear_canvas1_4" type="button">
-        図形クリア => <span>Click</span>
+        図形クリア => <span class="click">Click</span>
       </button>
       <button class="action" type="button">
-        赤色ボール出現 => ここを <span>Click</span><br />
-        ボール跳躍開始 => <u>CANVAS</u>を <span>Click</span><br />
-        跳躍スピードアップ => <u>CANVAS</u>を繰り返し <span>Click</span><br />
-        ボール停止 => CANVAS <span>Click</span> 回数分、<u>CANVAS</u>から <span>Mouse out</span><br />
-        それでは <span>Click</span> & <span>Mouse-out</span> をお楽しみください。
+        赤色ボール出現 => ここを <span class="click">Click</span><br />
+        ボール跳躍開始 => <span class="underline">CANVASを</span> <span class="click">Click</span><br />
+        跳躍スピードアップ => <span class="underline">CANVASを</span>繰り返し <span class="click">Click</span><br />
+        ボール停止 => CANVAS <span class="click">Click</span> 回数分、<span class="underline">CANVASから</span> <span
+          class="click">Mouse out</span><br />
+        それでは <span class="click">Click</span> & <span class="click">Mouse-out</span> をお楽しみください。
       </button>
       <button class="clear_canvas5" type="button">
-        ボールクリア => <u>ボールを停止させてから</u>ここを <span>Click</span>
+        ボールクリア => <span class="underline">ボールを停止させてから</span>ここを <span class="click">Click</span>
       </button>
       <button class="splitter" type="button">
-        図形とボールを横方向に展開表示 => <span>Click</span><br />
-        図形とボールを重ねて表示 => <span>Click</span>
+        図形とボールを横方向に展開表示 => <span class="click">Click</span><br />
+        図形とボールを重ねて表示 => <span class="click">Click</span>
       </button>
       <button class="relo" type="button">
         再読込 => <span>Click</span>
