--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         ボールクリア => <span class="underline">ボールを停止させてから</span>ここを <span class="click">Click</span>
       </button>
       <button class="splitter" type="button">
-        図形とボールを横方向に展開表示 => <span class="click">Click</span><br />
-        図形とボールを重ねて表示 => <span class="click">Click</span>
+        図形とボールを横方向に展開表示: <span class="click">Click</span>
+        <=> 図形とボールを重ねて表示: <span class="click">Click</span>
       </button>
       <button class="relo" type="button">
         再読込 => <span>Click</span>
