--- a/index.html
+++ b/index.html
@@ -26,9 +26,6 @@
       <button class="triangle" type="button">
         Challenge3: 三角はいくつ ? => <span class="click">Click</span>
       </button>
-      <button class="clear_canvas1_4" type="button">
-        図形クリア => <span class="click">Click</span>
-      </button>
       <button class="action" type="button">
         赤色ボール出現 => ここを <span class="click">Click</span><br />
         ボール跳躍開始 => <span class="underline">CANVASを</span> <span class="click">Click</span><br />
@@ -37,23 +34,27 @@
           class="click">Mouse out</span><br />
         それでは <span class="click">Click</span> & <span class="click">Mouse-out</span> をお楽しみください。
       </button>
-      <button class="clear_canvas5" type="button">
-        ボールクリア => <span class="underline">ボールを停止させてから</span>ここを <span class="click">Click</span>
-      </button>
       <button class="splitter" type="button">
-        図形とボールを横方向に展開表示: <span class="click">Click</span>
-        <=> 図形とボールを重ねて表示: <span class="click">Click</span>
+        高速営業: <span class="click">Click</span>
+        <=> 通常営業: <span class="click">Click</span>
+      </button>
+      <button class="clear_canvas5" type="button">
+        ボールクリア => <span class="underline">ボールを停止させてから</span>ここを <span class="click">Click</span><br />
+        (ヒント: <span class="click">Mouse-out</span>)
+      </button>
+      <button class="clear_canvas1_4" type="button">
+        図形クリア => <span class="click">Click</span>
       </button>
       <button class="relo" type="button">
         再読込 => <span>Click</span>
       </button>
     </header>
     <main>
-      <canvas class="canvas" id="canvas1"></canvas>
-      <canvas class="canvas" id="canvas2"></canvas>
-      <canvas class="canvas" id="canvas3"></canvas>
-      <canvas class="canvas" id="canvas4"></canvas>
-      <canvas class="canvas" id="canvas5"></canvas>
+      <canvas class="canvas1" id="canvas1"></canvas>
+      <canvas class="canvas2" id="canvas2"></canvas>
+      <canvas class="canvas3" id="canvas3"></canvas>
+      <canvas class="canvas4" id="canvas4"></canvas>
+      <canvas class="canvas5" id="canvas5"></canvas>
     </main>
     <footer>
       This product is dedicated to Ms. Sicily and Mr. Su. Since Jan, 2022 (C)
