made canases spread w/ grids controlled #2

--- a/index.html
+++ b/index.html
@@ -35,8 +35,12 @@
         それでは <span class="click">Click</span> & <span class="click">Mouse-out</span> をお楽しみください。
       </button>
       <button class="splitter" type="button">
-        高速営業: <span class="click">Click</span>
-        <=> 通常営業: <span class="click">Click</span>
+        同軸回転: <span class="click">Click</span>
+        <=>5軸低速回転: <span class="click">Click</span>
+      </button>
+      <button class="canvas_speeder" type="button">
+        同軸回転時は: 高速回転: <span class="click">Click</span>
+        <=> 低速回転: <span class="click">Click</span>
       </button>
       <button class="clear_canvas5" type="button">
         ボールクリア => <span class="underline">ボールを停止させてから</span>ここを <span class="click">Click</span><br />
