--- a/index.html
+++ b/index.html
@@ -18,41 +18,40 @@
   <div class="wrapper">
     <header>
       <button class="square" type="button">
-        Challenge1: 黄と紫の四角による<span class="underline">ネ〇〇イ</span>の抽象 => <span class="click">Click</span>
+        Challenge1: 黄と紫の四角による<span class="underline">ネ〇〇イ</span>の抽象
       </button>
       <button class="circle" type="button">
-        Challenge2: 円はいくつ ? => <span class="click">Click</span>
+        Challenge2: 円はいくつ ?
       </button>
       <button class="triangle" type="button">
-        Challenge3: 三角はいくつ ? => <span class="click">Click</span>
+        Challenge3: 三角はいくつ ?
       </button>
       <button class="action" type="button">
-        赤色ボール出現 => ここを <span class="click">Click</span><br />
-        ボール跳躍開始 => <span class="underline">CANVASを</span> <span class="click">Click</span><br />
-        跳躍スピードアップ => <span class="underline">CANVASを</span>繰り返し <span class="click">Click</span><br />
-        ボール停止 => CANVAS <span class="click">Click</span> 回数分、<span class="underline">CANVASから</span> <span
-          class="click">Mouse out</span><br />
-        それでは <span class="click">Click</span> & <span class="click">Mouse-out</span> をお楽しみください。
+        赤色ボール出現
       </button>
       <button class="splitter" type="button">
-        中央1軸回転 <span class="click">Click</span>
-        <=>水平5軸回転<span class="click">Click</span>
+        中央1軸回転 <=>水平5軸回転
       </button>
       <button class="canvas_speeder" type="button">
-        高速回転 <span class="click">Click</span>
-        <=> 低速回転<span class="click">Click</span>
+        高速回転 <=> 低速回転
       </button>
       <button class="clear_canvas5" type="button">
-        ボールクリア => <span class="underline">ボールを停止させてから</span>ここを <span class="click">Click</span><br />
-        (ヒント: <span class="click">Mouse-out</span>)
+        ボールクリア: <span class="underline">ボールを停止させてから</span>ここをClick<br />
+        (ヒント: Mouse-out)
       </button>
       <button class="clear_canvas1_4" type="button">
-        図形クリア => <span class="click">Click</span>
+        図形クリア
       </button>
       <button class="relo" type="button">
-        再読込 => <span>Click</span>
+        再読込
       </button>
     </header>
+    <p>ボール跳躍開始: <span class="underline">CANVASを</span> <span class="click">Click</span><br>
+      跳躍スピードアップ: <span class="underline">CANVASを</span>繰り返し <span class="click">Click</span><br>
+      ボール停止: CANVAS <span class="click">Click</span> 回数分、<span class="underline">CANVASから</span><span
+        class="click"> Mouse out</span><br>
+      <span class="click">Click</span> & <span class="click">Mouse-out</span> をお楽しみください。
+    </p>
     <main>
       <canvas class="canvas1" id="canvas1"></canvas>
       <canvas class="canvas2" id="canvas2"></canvas>
