a single annotation added

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,9 @@
 <html lang="ja">
 
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="Adopting-ESM-with-2D-contexts-put-on-a-canvas." />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="description" content="Adopting-ESM-with-2D-contexts-put-on-a-canvas.">
   <title>canvasESMeducated</title>
 </head>
 
@@ -30,7 +30,7 @@
         高速回転 ⇔ 低速回転
       </button>
       <button class="clear_canvas5" type="button">
-        ボールクリア: <span class="underline">ボールを停止させてから</span>ここをClick<br />
+        ボールクリア: <span class="underline">ボールを停止させてから</span>ここをClick<br>
         (ヒント: Mouse-out)
       </button>
       <button class="clear_canvas1_4" type="button">
@@ -44,7 +44,8 @@
       跳躍スピードアップ: <span class="underline">CANVASを</span>繰り返し <span class="click">Click</span><br>
       ボール停止: CANVAS <span class="click">Click</span> 回数分、<span class="underline">CANVASから</span><span class="click">
         Mouse out</span><br>
-      <span class="click">Click</span> & <span class="click">Mouse-out</span> をお楽しみください。
+      <span class="click">Click</span> & <span class="click">Mouse-out</span> をお楽しみください。<br>
+      (注): <span class="underline">ボールの表示とクリアは、画面上部のボタンから実施してください。</span>
     </p>
     <main>
       <canvas class="canvas1" id="canvas1"></canvas>
