--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
         図形クリア
       </button>
       <button class="relo" type="button">
-        再読込
+        途中でウィンドウサイズを変更された場合は再読込をしてください。ウィンドウサイズに合わせて図形類をリサイズします。
       </button>
     </header>
     <p>ボール跳躍開始: <span class="underline">CANVASを</span> <span class="click">Click</span><br>
